# Real-Time-Isomorphic-Control-of-UAV-Swarms

./: .gitignore  .gitmodules  LICENSE  README.md  hand_tracking_depthcam_modes.py  mkdocs.yml  pyproject.toml  text1.txt  text2.txt  text3.txt  text4.txt
.devcontainer/: Dockerfile  devcontainer.linux.json  devcontainer.wsl2.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: docs.yml  testing.yml
crazyflow/: __init__.py  exception.py  scene.xml  utils.py
crazyflow/control/: __init__.py  control.py  mellinger.py
crazyflow/envs/: __init__.py  drone_env.py  figure_8_env.py  landing_env.py  norm_actions_wrapper.py  reach_pos_env.py  reach_vel_env.py
crazyflow/randomize/: __init__.py  randomize.py
crazyflow/sim/: __init__.py  data.py  functional.py  integration.py  physics.py  sensors.py  sim.py  symbolic.py  visualize.py
docs/: examples.md  features.md  index.md  installation.md  usage.md
docs/api/: index.md
docs/stylesheets/: extra.css
hand_swarm/: hand_tracking.py  list_profiles.py  rgbd_capture_and_export.py  test1_crazyflow.py  test_orbbec.py
src/: hand_swarm_control_orbbec.py  hand_tracking.py  hand_tracking_dual_orbbec_webcam.py  hand_tracking_orbbec.py  hand_tracking_orbbec_modes.py  hand_tracking_webcam_modes.py  offline_control.py  online_control.py  online_control_corbbec.py  online_control_orbbec.py  pixi.toml  test2_laptopCam.py
src/backup/: __init__.py  hand_swarm_control_orbbec.py  hand_tracking_dual_orbbec_webcam.py  hand_tracking_dual_orbbec_webcam_run.py  hand_tracking_orbbec.py  hand_tracking_orbbec_modes_main.py  hand_tracking_orbbec_modes_run.py  hand_tracking_webcam_modes_run.py  orbbec_pipeline_cli.py  orbbec_pipeline_io.py  shared_modes_all.py  shared_modes_processing.py  shared_modes_state.py  swarm_main.py
src/backup/tools/: list_profiles.py  test1_crazyflow.py  test_orbbec.py
src/hand_morph_kit/: __init__.py  compose.py  depth_gesture_facade.py  geometry_ray_aabb.py  morph_plane_box.py  morph_plane_pyramid.py  morph_plane_sphere.py  pipeline.py
src/pipelines/: __init__.py  dual_main.py  orbbec_main.py  webcam_main.py
src/runtime/: __init__.py  hand_tracking_dual_orbbec_webcam.py  hand_tracking_orbbec.py  hand_tracking_webcam_modes.py
src/shared/: __init__.py  common_utils.py  depth_fusion_utils.py  dual_state_utils.py  dual_view_utils.py  fusion_utils.py  hand_constants.py  hand_draw_utils.py  hand_frame_utils.py  mode_gesture_utils.py  modes_runtime.py  morph_geometry.py  morph_lp_plot.py  morph_renderers.py  morph_shape_control.py  mp_hand_utils.py  orbbec_draw_steps.py  orbbec_live_steps.py  plot_3d_utils.py  stream_runtime_utils.py  topology_utils.py
submodules/drone-controllers/: .gitignore  README.md  mkdocs.yml  pyproject.toml
submodules/drone-controllers/.github/workflows/: testing.yml
submodules/drone-controllers/docs/: gen_ref_pages.py  index.md
submodules/drone-controllers/docs/api/: core.md  mellinger.md  transform.md
submodules/drone-controllers/docs/getting-started/: installation.md  quick-start.md
submodules/drone-controllers/docs/stylesheets/: extra.css
submodules/drone-controllers/drone_controllers/: __init__.py  core.py  drones.py  transform.py
submodules/drone-controllers/drone_controllers/mellinger/: __init__.py  control.py  params.py  params.toml
submodules/drone-controllers/tests/: conftest.py
submodules/drone-controllers/tests/unit/: test_mellinger.py
submodules/drone-models/: .gitignore  README.md  mkdocs.yml  pyproject.toml
submodules/drone-models/.github/workflows/: testing.yml
submodules/drone-models/docs/: gen_ref_pages.py  index.md
submodules/drone-models/docs/examples/: index.md
submodules/drone-models/docs/get-started/: installation.md  quick-start.md
submodules/drone-models/docs/user-guide/: batching.md  models.md  parametrize.md  symbolic.md  system-identification.md  transforms.md
submodules/drone-models/drone_models/: __init__.py  _typing.py  core.py  drones.py  symbols.py  transform.py
submodules/drone-models/drone_models/data/: cf21B_500.xml  cf2x_L250.xml  cf2x_P250.xml  cf2x_T350.xml  params.toml
submodules/drone-models/drone_models/data/assets/cf21B/: cf_led-diffusor.stl
submodules/drone-models/drone_models/first_principles/: __init__.py  model.py  params.toml
submodules/drone-models/drone_models/so_rpy/: __init__.py  model.py  params.toml
submodules/drone-models/drone_models/so_rpy_rotor/: __init__.py  model.py  params.toml
submodules/drone-models/drone_models/so_rpy_rotor_drag/: __init__.py  model.py  params.toml
submodules/drone-models/drone_models/utils/: __init__.py  data_utils.py  identification.py  rotation.py
submodules/drone-models/tests/: conftest.py
submodules/drone-models/tests/integration/: test_identification_pipeline.py
submodules/drone-models/tests/unit/: test_identification.py  test_models.py  test_rot.py
