[project]
name = "drone_controllers"
version = "0.1.0b0"
description = "Controllers for quadrotor drones."
authors = [{ name = "Marcel Rath" }, { name = "Martin Schuck" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy >=1.17.0",
    "array-api-compat",
    "array-api-extra",
    # "array-api-typing", To be added back in when properly released on pypi
]

[project.optional-dependencies]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
drone_controllers = ["data/*.xml", "**/*.toml",]

[tool.pytest.ini_options]
markers = ["unit", "integration"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "docs/conf.py",
]

line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN", "T20"]
ignore = ["ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]  # Prevent ruff from reporting conflicting settings with isort
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "D104"]
"examples/*" = ["D100", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pixi]
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pip = "*"
ruff = "*"

[tool.pixi.pypi-dependencies]
drone_controllers = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
dist = { features = ["dist"], solve-group = "default" }

[tool.pixi.feature.tests.dependencies]
pytest = ">=8.4.1"
array-api-strict = ">=2.4.1,<2.5"
numpy = ">=1.22.0"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest -v", description = "Run tests" }

[tool.pixi.feature.docs.dependencies]
mkdocs = ">=1.5.3"
mkdocs-material = ">=9.4.0"
mkdocstrings = ">=0.24.0"
mkdocstrings-python = ">=1.7.0"
mkdocs-gen-files = ">=0.5.0"
mkdocs-literate-nav = ">=0.6.0"

[tool.pixi.feature.docs.tasks]
docs-serve = { cmd = "mkdocs serve", description = "Serve docs locally" }
docs-build = { cmd = "mkdocs build", description = "Build docs" }

[tool.pixi.feature.dist.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.feature.dist.tasks]
build = { cmd = "python -m build && twine check dist/*", description = "Build and test the package" }
upload_test = { cmd = "twine upload -r testpypi dist/*", description = "Test upload of the built package" }
upload = { cmd = "twine upload dist/*", description = "Upload of the built package" }