[project]
name = "drone_models"
version = "0.1.0b0"
description = "Models of quadrotor drones for estimation and control tasks."
authors = [{ name = "Marcel Rath" }, { name = "Martin Schuck" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.17.0",
    "casadi>=3.7.0",
    "array-api-compat",
    "array-api-extra",
    # "array-api-typing", To be added back in when properly released on pypi
]

[project.optional-dependencies]
sysid = [
    "matplotlib",
    "jax >= 0.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
drone_models = [
    "data/assets/cf2x/cf2x_pcb.stl",
    "data/**/*.*",                   # 3D model and parameter information
    "**/*.toml",                     # model specific parameter information
]

[tool.pytest.ini_options]
markers = ["unit", "integration", "render"]
addopts = "-m 'not render'"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "docs/conf.py",
]

line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN", "T20"]
ignore = ["ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]  # Prevent ruff from reporting conflicting settings with isort
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"benchmark/*" = ["D100", "D103"]
"tests/*" = ["D100", "D103", "D104"]
"examples/*" = ["D100", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pixi]
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cpu"]  # We only want to have the CPU version

[tool.pixi.dependencies]
pip = "*"
ruff = "*"

[tool.pixi.pypi-dependencies]
drone_models = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
sysid = { features = ["sysid"], solve-group = "default" }
tests = { features = ["tests", "sysid"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
dist = { features = ["dist"], solve-group = "default" }

# [tool.pixi.feature.tests]
# system-requirements = { cuda = "12"}

[tool.pixi.feature.tests.dependencies]
pytest = ">=8.4.1"
pytest-timeout = ">=2.1.0"
pytest-cov = ">=6.0.0"
array-api-strict = ">=2.4.1"

[tool.pixi.feature.tests.pypi-dependencies]
torch = ">=2.7.0"  # For doctests
jax = ">=0.7.0"
pytest-markdown-docs = "*"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest -v tests", description = "Run tests" }
test-docs = { cmd = "pytest -v --markdown-docs --markdown-docs-syntax=superfences drone_models/ docs/ --ignore=docs/gen_ref_pages.py", env = { SCIPY_ARRAY_API = "1" }, description = "Run doctests for docstrings and documentation" }

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
click = "8.2.1.*"  # https://github.com/mkdocs/mkdocs/issues/4032

[tool.pixi.feature.docs.pypi-dependencies]
mkdocstrings = { version = "*", extras = ["python"] }
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"

[tool.pixi.feature.docs.tasks]
docs-serve = { cmd = "mkdocs serve", description = "Serve docs locally" }
docs-build = { cmd = "mkdocs build", description = "Build docs" }

[tool.pixi.feature.dist.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.feature.dist.tasks]
build = { cmd = "python -m build && twine check dist/*", description = "Build and test the package" }
upload_test = { cmd = "twine upload -r testpypi dist/*", description = "Test upload of the built package" }
upload = { cmd = "twine upload dist/*", description = "Upload of the built package" }